--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js",
     "lint": "prettier --check .",
     "format": "prettier --write .",
+    "dev": "nodemon app.js",
     "test": "jest",
     "prepare": "husky install"
   },
@@ -47,6 +48,7 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@commitlint/format": "^12.1.1",
     "husky": "^6.0.0",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
   }
 }
